--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.2.2
 Flask_Bcrypt==1.0.1
 Flask_Login==0.6.2
-Flask_SQLAlchemy==2.5.1
+Flask_SQLAlchemy==3.0.3
 PyYAML==6.0
 scipy>=1.0.0
 Werkzeug==2.3.4
+mysql-connector==2.2.9
